--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-    "recommendations": ["esbenp.prettier-vscode", "prasadbobby.auto-rename-tag"]
+    "recommendations": [
+        "esbenp.prettier-vscode",
+        "prasadbobby.auto-rename-tag",
+        "formulahendry.auto-rename-tag"
+    ]
 }
